fix: content & spacing

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -96,7 +96,6 @@ span {
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
-  color: #FFFFFF;
 }
 
 h4 {
